Fix wrap

--- a/frontend/src/components/fab/style.css
+++ b/frontend/src/components/fab/style.css
@@ -39,6 +39,7 @@
 
 .label {
     margin-right: 8px;
+    white-space: nowrap;
 }
 
 svg + .label {
